# serial

./: .gitignore  CMakeLists.txt  README.md
include/serial/: serial.h  serial_api.h  serial_c.h
src/: serial_c.cc
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_osx.cc
visual_studio/serial/: serial.vcxproj  serial.vcxproj.filters
